<resources>
    <string name="app_name">Todo with CleanFluxRxified</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_clear_completed">Clear all completed</string>
    <string name="title_activity_todo">Todo</string>
    <string name="action_sort_completed_only">Show Completed</string>
    <string name="action_sort_by_incomplete">Show Incomplete</string>
    <string name="action_sort_by_all">Show All</string>
</resources>
