<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fsh.poc.cfr.MainActivity">
    <item
        android:id="@+id/action_clear_all_completed"
        android:icon="@drawable/ic_clear_completed_24dp"
        android:orderInCategory="100"
        android:title="@string/action_clear_completed"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear_all"
        android:icon="@drawable/ic_delete_24dp"
        android:orderInCategory="200"
        android:title="@string/action_clear_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_sort_by_completed"
        android:checkable="true"
        android:orderInCategory="300"
        android:title="@string/action_sort_completed_only" />
    <item
        android:id="@+id/menu_sort_by_incompleted"
        android:checkable="true"
        android:orderInCategory="300"
        android:title="@string/action_sort_by_incomplete" />
    <item
        android:id="@+id/menu_sort_by_all"
        android:checkable="true"
        android:orderInCategory="300"
        android:title="@string/action_sort_by_all" />
</menu>
